--- a/knex/package.json
+++ b/knex/package.json
@@ -7,7 +7,9 @@
     "express": "^4.17.1",
     "knex": "^0.95.4",
     "node": "^15.12.0",
-    "pg": "^8.5.1"
+    "node-fetch": "^2.6.1",
+    "pg": "^8.5.1",
+    "redis": "^3.1.0"
   },
   "devDependencies": {},
   "scripts": {
